# parallel_programming

./: .gitignore  1.1.10.cpp  1.1.14.cpp  1.1.5.cpp  1.2.14.cpp  1.2.5.cpp  1.2.6.cpp  1.3.10.cpp  1.3.14.cpp  1.3.5.cpp  1.4.14.cpp  1.4.14.test.cpp  1.4.5.cpp  1_3_14_100.txt  1_3_14_1000.txt  1_3_14_1500.txt  1_3_14_500.txt  1_4_14_100.txt  1_4_14_1000.txt  1_4_14_1500.txt  1_4_14_500.txt  CMakeLists.txt  main.cpp  tasks.h
